# public-mpc-wallet

./: .gitlab-ci.yml  FUTURE_WORK  README
bigints/: Cargo.toml
bigints/src/: big_gmp.rs  big_num.rs  big_num_gcd.rs  lib.rs  serialize.rs  traits.rs
demo/client/: index.html  index.js  package-lock.json  package.json
demo/server/: .gitignore  mix.exs
demo/server/assets/: package-lock.json
demo/server/config/: config.exs
demo/server/lib/: mpcwallet.ex  server.ex
demo/server/lib/server/: application.ex
demo/server/lib/server_web/: endpoint.ex  router.ex
demo/server/lib/server_web/controllers/: mpc_controller.ex
demo/server/test/support/: conn_case.ex  data_case.ex
mpc-wallet-elixir/: Cargo.toml
mpc-wallet-elixir/src/: lib.rs
mpc-wallet-lib/: Cargo.toml
mpc-wallet-lib/benches/: client.rs  common.rs  server.rs
mpc-wallet-lib/src/: client.rs  common.rs  lib.rs  server.rs
mpc-wallet-lib/src/curves/: mod.rs  secp256_k1.rs  secp256_r1.rs  traits.rs
mpc-wallet-lib/tests/: integration_tests.rs
mpc-wallet-nodejs-win/: .gitignore
mpc-wallet-nodejs-win/native/: Cargo.toml  index.js
mpc-wallet-nodejs-win/native/src/: lib.rs
mpc-wallet-nodejs/lib/: index.js
mpc-wallet-nodejs/native/: Cargo.toml
mpc-wallet-nodejs/native/src/: lib.rs
mpc-wallet-wasm/: Cargo.toml
mpc-wallet-wasm/src/: lib.rs
rust-paillier/: Cargo.toml
rust-paillier/src/: core.rs  keygen.rs  lib.rs
rust-paillier/src/encoding/: integral.rs  mod.rs
