[package]
name = "bigints"
version = "1.0.1"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["rust-gmp"]
num_bigint = ["num-bigint", "num-traits", "num-integer"]

[dependencies]
getrandom = "0.1"
num-bigint = { version = "0.3", features = ["serde"], optional = true }
num-integer = { version = "0.1", optional = true }
num-traits = { version = "0.2", optional = true }
rust-gmp = { version = "0.5", features = ["serde_support"], git = "https://github.com/KZen-networks/rust-gmp", optional = true }
serde = "1.0"
serde_derive = "1.0"

[dev-dependencies]
serde_json = "1.0"
