[package]
name = "mpc-wallet-elixir"
version = "1.1.2"
edition = "2018"

[lib]
name = "mpc_wallet_elixir"
crate-type = ["dylib"]

[features]
default = ["rust_gmp"]
rust_gmp = ["mpc-wallet-lib/rust_gmp"]
num_bigint = ["mpc-wallet-lib/num_bigint"]

[dependencies]
mpc-wallet-lib = { version = "*", path = '../mpc-wallet-lib' }
rustler = "0.21"
serde_json = "1.0"

[profile.release]
# optimize for speed rather than for binary size
opt-level = 3
