[package]
name = "mpc-wallet-lib"
version = "1.1.2"
edition = "2018"
description = "MPC wallet library"

[features]
rust_gmp = ["bigints/rust-gmp", "paillier/rust_gmp"]
num_bigint = ["bigints/num_bigint", "paillier/num_bigint", "num-integer", "num-traits"]
wasm = ["chrono/wasmbind", "getrandom/wasm-bindgen"]

[dependencies]
amcl = { version = "0.2", default-features = false, features = ["nist256"] }
bigints = { version = "*", path = '../bigints', default-features = false }
chrono = "0.4"
getrandom = "0.1"
indexmap = "1.3"
lazy_static = "1.4"
num-integer = { version = "0.1", optional = true }
num-traits = { version = "0.2", optional = true }
paillier = { version = "*", path = '../rust-paillier' }
rayon = "1.3"
secp256k1 = { version = "0.17", features = ["serde"] }
serde = "1.0"
sha2 = "0.9"
subtle = "2.2"
zeroize = { version = "1.1", default-features = false }

[dev-dependencies]
bincode = "1.1"
criterion = "0.3"
serde_json = "1.0"

[[bench]]
name = "client"
harness = false

[[bench]]
name = "common"
harness = false

[[bench]]
name = "server"
harness = false
