[package]
name = "mpc-wallet-wasm"
version = "1.1.2"
edition = "2018"

[lib]
name = "mpc_wallet_wasm"
crate-type = ["cdylib"]

[features]
default = ["num_bigint"]
rust_gmp = ["mpc-wallet-lib/rust_gmp"]
num_bigint = ["mpc-wallet-lib/num_bigint"]

[dependencies]
console_error_panic_hook = { version = "0.1", optional = true }
mpc-wallet-lib = { version = "*", path = '../mpc-wallet-lib', features = ["wasm"] }
serde_json = "1.0"
wasm-bindgen = { version = "0.2" }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# llvm optimization level to produce faster wasm code (in terms of scalar multiplication)
opt-level = 2
# reduce binary size in favor of compile time
lto = true
